2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ld.s: Remove "l.d", "s.d" and "sd" instructions.
	* gas/mips/ld.d: Adjust accordingly.
	* gas/mips/ld-ilocks.d: Likewise

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ld.s: Remove ".set mips1".
	* gas/mips/ld.d: Remove "-march=r4000" and "-mmips:4000" from
	gas/objdump options.
	* gas/mips/ld-ilocks.d: Add "-32" to gas options.
	* gas/mips/mips.exp: Run the two cases with run_dump_test_arches.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ld.s: Remove MIPS III bits.
	* gas/mips/ld.d: Adjust accordingly.
	* gas/mips/ld-ilocks.d: Likewise.
	* gas/mips/ld-ilocks-addr32.d: Remove file.
	* gas/mips/mips.exp: Adjust accordingly.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ld.d: Spell out reloc names.
	* gas/mips/ld-ilocks.d: Likewise.
	* gas/mips/ld-ilocks-addr32.d: Likewise.

2010-10-23  Mark Mitchell  <mark@codesourcery.com>

	* gas/elf/elf.exp: Add group0c test.
	* gas/elf/group0c.d: New.
	* gas/elf/group0a.d: Expect ".group" for the name of group
	sections.
	* gas/elf/group0b.d: Likewise.
	* gas/elf/group1a.d: Likewise.
	* gas/elf/group1b.d: Likewise.
	* gas/elf/groupautoa.d: Likewise.
	* gas/elf/groupautob.d: Likewise.
	* gas/elf/section4.d: Likewise.
	* gas/ia64/group-1.d: Likewise.  Adjust hard-coded constants.

2010-10-22  Nick Clifton  <nickc@redhat.com>

	* gas/all/fwdexp.d: Also look for f8ffffff.
	* gas/arm/msr-reg-thumb.d: Skip for non-ELF based targets.
	* gas/arm/vldr.d: Likewise.
	* gas/arm/thumb2_ldmstm.d: Allow for extra NOPs at the end of the disassembly.
	* gas/cfi/cfi.exp (cfi-arm-1): Only run for ELF based ARM targets.

2010-10-21  Joseph Myers  <joseph@codesourcery.com>

	* gas/tic6x/attr-arch-directive-1.d,
	gas/tic6x/attr-arch-directive-2.d,
	gas/tic6x/attr-arch-directive-3.d,
	gas/tic6x/attr-arch-directive-4.d,
	gas/tic6x/attr-arch-directive-4.s,
	gas/tic6x/attr-arch-directive-5.d,